# Neural-Jump

./: .gitignore  README.md  pyproject.toml  requirements.txt  run-ai.py  run-game.py
ai/: a2c_trainer.py  agent.py  conv_neural_network.py  generation.py  neural_network.py  small_conv_neural_network.py
game/: constants.py  game.py  level.py  main.py  platform.py  player.py  settings.py  tiles.py
game/maps/: level_1.txt
maps/: level_1.txt
