[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-jump"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib==3.10.9",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "torch==2.12.0",
    "pygame==2.6.1"
]

[tool.setuptools.packages.find]
include = ["ai", "game"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]